kubernetes/nis/deployment-worker.yaml
apiVersion: apps/v1 
kind: Deployment 
metadata:
  name: nis
spec: 
  replicas: 1
  selector:
    matchLabels: 
      run: nis
  template:
    metadata:
      labels:
        run: nis
    spec:
      containers:
        - name: postgres
          image: postgres:latest
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: nis-postgres
              mountPath: /var/lib/postgresql/data
        - name: backend
          image: wombat19/cc-project-worker:latest
          ports:
            - containerPort: 8080  # Adjust the port as needed
      volumes:
        - name: nis-postgres
          persistentVolumeClaim:
            claimName: nis-postgres-pvc
