kubernetes/nis/service-worker.yaml
apiVersion: v1
kind: Service
metadata:
  name: nis
  labels:
    run: nis
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http 
  selector:
    run: nis
