kubernetes/nis/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nis 
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: nis
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nis
            port:
              number: 81
